# automagik-forge

./: .gitignore  .gitmodules  .mcp.json  .release-notes-v0.3.8.saved  AGENTS.md  AUTHENTICATION.md  CLAUDE.md  CUSTOMIZATION_STRATEGY.md  Cargo.toml  Cross.toml  DEVELOPER.md  DIVERGENCE_REPORT.md  Dockerfile  FORGE_API_REFERENCE.md  Makefile  README.md  SWAGGER_IMPLEMENTATION.md  UPSTREAM_MERGE_ANALYSIS_PR3_REPORT.md  UPSTREAM_MERGE_REVIEW_PR3.md  analyze-migration-diff.sh  build-all-platforms-local.sh  build-all-platforms.sh  build-npm-package.sh  detailed-file-analyzer.sh  diff-stats.txt  download-artifacts.sh  genie.sh  gh-build.sh  inspection.md  local-build.sh  migration-analysis-framework.md  monitor-build.sh  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  report.md  roadmap-plan.md  test-npm-package.sh  (+4 more)
.cargo/: config.toml
.claude/: README.md  genie-version.json
.claude/agents/: forge-master.md  vibe-kanban-agent-creator.md  vibe-kanban-agent-enhancer.md  vibe-kanban-analyzer.md  vibe-kanban-claudemd.md  vibe-kanban-clone.md  vibe-kanban-dev-coder.md  vibe-kanban-dev-designer.md  vibe-kanban-dev-fixer.md  vibe-kanban-dev-planner.md
.claude/commands/: forge.md  prompt-to-wish.md  review-merge-pr.md  upmerge.md  wish-agent.md  wish.md
.genie/: README.md
.genie/agents/: README.md  forge.md  plan.md  review.md  wish.md
.genie/guides/: getting-started.md
.genie/product/: environment.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.genie/reports/: blocker-implementor-task-c-18-202510072033.md  blocker-implementor-upstream-overlay-202510030536.md  commit-advice-github-actions-submodules-202510101530.md  (+61 more)
.github/: labels.yml
.sqlx/: query-17daf7a7586c71defe4a85081ecc62b3fd30b91d0772548dee66a8f8447d881d.json  query-19ad7d1d65078f2332afc2858b6fd5da51c5123b168f1317e8c89fdb8691fccc.json  query-3b075479dab595f28e30b791b78e45ed53f7c9bf2bf63d81045af8b30bcbb968.json  query-45eeaef9c0e14730dac5cad78366ec8e45544bb14c4a7f10e8d507f64fce3a14.json  query-484b97c514c7867cd2240938291661af37b459549b2a594218e7735fab1ff15a.json  query-81e89ee9dc14cdb1d662e862c9228d43d8b2312ba9e1cca66e81ee35bce2aaf0.json
analysis/: conflict-patterns.md  integration-points.md  upstream-as-library-todo.md  upstream-divergence-report.md
docs/: task2-extraction-design.md  upstream-as-library-foundation.md  upstream-diff-full.patch  upstream-diff-latest.txt
forge-app/: Cargo.toml
forge-app/migrations/: 20251020000001_add_agent_task_status.sql
forge-app/src/: lib.rs  main.rs  openapi.rs  router.rs
forge-app/src/mcp/: advanced_server.rs  mod.rs  task_server.rs  verification.rs
forge-app/src/services/: mod.rs  notification_hook.rs
forge-extensions/config/: Cargo.toml
forge-extensions/config/src/: lib.rs  service.rs  types.rs
forge-extensions/omni/: Cargo.toml
forge-extensions/omni/src/: client.rs  service.rs  types.rs
forge-overrides-backup/: .gitkeep
frontend/: README.md  index.html  kill  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
migration-analysis-results/: MIGRATION_ANALYSIS_REPORT.md  complete-branch-diff.txt  dev-files.txt  diff-statistics.txt  files-only-in-dev.txt  modified-files-list.txt  workspace-migration-old-files.txt
npx-cli/: README.md  package.json
scripts/: check-upstream-alignment.sh  collect-forge-snapshot.sh  enhance-release-notes.sh  rebrand-mechanical.sh  rebrand-old.sh  rebrand.sh  release-analyzer.sh  run-forge-regression.sh  run-upstream-audit.sh  smart-monitor-publish.sh  sync-upstream-assets.js  upstream-merge-workflow.md
shared/: forge-types.ts  types.ts
(+340 files in other folders)
