[package]
name = "forge-app"
version = "0.3.16"
edition = "2024"
default-run = "forge-app"

[[bin]]
name = "forge-app"
path = "src/main.rs"

[[bin]]
name = "forge-mcp-task-server"
path = "src/bin/forge_mcp_task_server.rs"

[dependencies]
# Framework dependencies
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { version = "8.0", features = ["debug-embed"] }
mime_guess = "2.0"
ts-rs = { workspace = true }
rmcp = { workspace = true }

# OpenAPI dependencies (manual YAML spec)
serde_yaml = "0.9"

# Database dependencies
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Upstream crate dependencies (for composition)
db = { path = "../upstream/crates/db" }
services = { path = "../upstream/crates/services" }
server = { path = "../upstream/crates/server" }
deployment = { path = "../upstream/crates/deployment" }
local-deployment = { path = "../upstream/crates/local-deployment" }
executors = { path = "../upstream/crates/executors" }
utils = { path = "../upstream/crates/utils" }

# Forge extensions
forge-omni = { path = "../forge-extensions/omni" }
forge-config = { path = "../forge-extensions/config" }

[dev-dependencies]
httpmock = "0.7"
