[package]
name = "forge-omni"
version = "0.4.1"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
ts-rs = { workspace = true }
services = { path = "../../upstream/crates/services" }
